# ori-native

./: .gitignore  Cargo.toml  shell.nix
examples/: any.rs  counter.rs  todo.rs
ori-native-core/: Cargo.toml
ori-native-core/src/: app.rs  color.rs  context.rs  element.rs  lib.rs  platform.rs  text.rs
ori-native-core/src/native/: group.rs  mod.rs  pressable.rs  scroll.rs  text.rs  textinput.rs  window.rs
ori-native-core/src/shadows/: group.rs  mod.rs  pressable.rs  scroll.rs  text.rs  textinput.rs
ori-native-core/src/style/: layout.rs  mod.rs  overflow.rs  window.rs
ori-native-core/src/views/: animate.rs  flex.rs  image.rs  mod.rs  pressable.rs  scroll.rs  text.rs  textinput.rs  window.rs
ori-native-gtk4/: Cargo.toml
ori-native-gtk4/src/: application.rs  default.css  lib.rs  platform.rs
ori-native-gtk4/src/views/: layer_shell.rs  mod.rs  session_lock.rs
ori-native-gtk4/src/widgets/: group.rs  image.rs  mod.rs  pressable.rs  scroll.rs  text.rs  textinput.rs  window.rs
ori-native-wry/: Cargo.toml
ori-native-wry/src/: app.rs  context.rs  index.js  lib.rs
ori-native-wry/src/widgets/: mod.rs  text.rs  window.rs
src/: app.rs  lib.rs  view.rs
