[package]
name = "ori-native"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[workspace]
members = [
  "ori-native-core",
  "ori-native-gtk4",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Ori Developers"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
ori-native-core = { path = "ori-native-core" }
ori-native-gtk4 = { path = "ori-native-gtk4" }

ori = { git = "https://github.com/ori-ui/ori" }

taffy   = "0.9"
tokio   = "1"
tracing = "0.1"

[features]
layer-shell = ["ori-native-gtk4/layer-shell"]
session-lock = ["ori-native-gtk4/session-lock"]

[dependencies]
ori-native-core = { workspace = true }
ori-native-gtk4 = { workspace = true }
ori             = { workspace = true }
tokio           = { workspace = true }
