[package]
name = "ori-native-gtk4"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ori-native-core = { workspace = true }
ori             = { workspace = true }
taffy           = { workspace = true }
tracing         = { workspace = true}

gtk4  = "0.10"
gdk4  = "0.10"
glib  = "0.21"
gio   = "0.21"
gsk4  = "0.10"
pango = "0.21"

[dependencies.graphene]
package = "graphene-rs"
version = "0.21"

[dependencies.tokio]
workspace = true
features = ["sync", "rt-multi-thread"]
