[package]
name = "ori-native-wry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ori-native-core = { workspace = true }
ori = { workspace = true }

tao = "0.34"
wry = "0.54"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
